fix layout issue when resizing

--- a/src/app/layout/default/default.component.scss
+++ b/src/app/layout/default/default.component.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 
-	&.container {
+	& .section {
 		flex: 1;
 	}
 }
